# auto-podcast-slicer-plus

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_PLAN.md  PIPELINE_INVOCATION_REVIEW.md  QUICKSTART.md  README.md  environment.yml  pyproject.toml  setup.ps1  setup.sh
briefs/: rx_T10.md  rx_T11.md  rx_T12.md  rx_T13.md  rx_T3.md  rx_T4.md  rx_T5.md  rx_T6.md  rx_T7.md  rx_T8.md  rx_T9.md
references/: project.example.yaml
schema/: project.schema.yaml
scripts/: check_env.py
skills/claude-code/: CLAUDE.md  SKILL.md
skills/claude-code/references/: feishu-video-delivery.md  fine-cut-montage-workflow.md  garden-core-api.md  (+14 more)
skills/hermes/: SKILL.md
skills/openclaw/: SKILL.md
src/garden_core/: __init__.py  config.py  pipeline.py  steps.py  types.py
tests/: render_fresh_frame.py  render_one_frame_fonttest.py  render_subjectivity.py  smoke_e2e.py  smoke_full_13.py  smoke_full_pipeline.py  smoke_full_pipeline_local.py  smoke_full_test_comprehensive.py  smoke_m2.py  smoke_produce_e2e.py  test_create_project.py  test_cut_multisource.py  test_cut_source_required.py  test_engines_from_env.py  test_gap_heal.py  test_io_roundtrip.py  test_io_source.py  test_llm_client.py  test_load_project.py  test_pipeline_invariants.py  test_pipeline_skip_existing.py  test_project_config.py  test_project_edit.py  test_project_rerun.py  test_project_run.py  test_project_validate.py  test_render.py  test_render_gate.py  test_render_gate_audit_dir.py  test_stage_proofread.py  test_stage_segment.py  test_time_util.py  test_types.py
(+70 files in other folders)
