[project]
name = "garden-core"
version = "0.1.0"
description = "AI-powered video production pipeline — transcribe, subtitle, cut, render"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "numpy>=2.0",
    "pyyaml>=6.0",
    "requests>=2.30",
    "httpx>=0.27",
    "soundfile>=0.12",
    "librosa>=0.10",
    "jieba>=0.42",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "funasr>=1.3",
    "modelscope>=1.37",
]
cpu = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "funasr>=1.3",
    "modelscope>=1.37",
]

[tool.setuptools.packages.find]
where = ["src"]
